# poorbricks

./: .bandit  .env.example  .env.template  .gcloudignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT_STATUS.md  Jenkinsfile  README.md  TEST_STRATEGY.md  airflow.md  cloudbuild.yaml  conftest.py  constants.py  databricks.Dockerfile  docker-compose.yml  pyproject.toml  test_private_imports.py  test_spark_setup.py
.circleci/: config.yml  generate-config.py
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml
api/: Dockerfile  __init__.py  config.py  main.py  test_all_null_guard.py  test_contract_cleanup.py  test_main.py  test_upload_auth.py  test_web_debug.py
deploy/k8s/: namespace.yaml
deploy/k8s/airflow/: pod_template.yaml  pvc.yaml  scheduler-gcs-sync-patch.yaml  values.yaml
deploy/k8s/airflow-custom/: 00-pvc-rwx.yaml  00-pvc.yaml  01-secrets.yaml  02-configmap.yaml  03-postgresql.yaml  04-serviceaccount.yaml  05-migrations.yaml  05-scheduler.yaml  06-triggerer.yaml  07-dag-processor.yaml  08-webserver.yaml  09-ingress.yaml  10-pdb.yaml
experiments/memory-stress-test/: README.md  measure_curve.sh  measure_ingest.py
framework/: decorator.py  discovery.py  faults.py  test_framework.py  test_snapshot.py
knowledge/: catalog.yaml  observability-ui.md  overview.md  testing-tables-locally.md  uploading-tables.md
pipelines/: framework.yaml
poorbricks/: __init__.py  alerting.py  anomaly.py  arch.py  check.py  cli.py  code_comments.py  constants.py  decorator.py  depgraph.py  discovery.py  drift.py  inputs.py  lineage_runtime.py  persist.py  prod_diff.py  pytest_plugin.py  registry.py  run_history.py  runner.py  settings.py  snapshot.py  staleness.py  test_alerting.py  test_anomaly.py  test_arch.py  test_contract_verify.py  test_depgraph.py  test_framework.py  test_impute.py  test_lineage_runtime.py  test_persist_contract_fields.py  test_run_history.py  test_snapshot.py  test_staleness.py  test_verify.py  upload_client.py  verify.py
poorbricks/airflow/: __init__.py  dag_generator.py  dag_parser.py  dag_store.py  fetch_code.py  test_dag_generator.py  test_dag_parser.py  test_dag_store.py  test_fetch_code.py  test_watch.py  test_workflow.py  watch.py  workflow.py
poorbricks/regression/: __init__.py  diff.py  prior.py  sources.py  test_prior.py
poorbricks/verification/: __init__.py  no_stubs.py  test_literals.py
poorbricks_framework/: __init__.py
scripts/: check_pipeline_structure.py  deploy_k8s.sh  measure_curve.sh  measure_ingest.py  out_of_core_baseline.md  postgres_export.py  push_contract.py  simulate_table_repo.py  teardown_test_data.sh  test_distributed_pipeline.py  verify_infra.py
streamlit_app/: airflow_runs.py  app.py  cache.py  contract_view.py  dev_debug.py  header.py  health.py  lineage.py  live_now.py  main_page.py  postgres_status.py  runner_view.py  sidebar.py  spark.py  status_dashboard.py  table_detail.py  theme.py
streamlit_app/contract/: __init__.py  expectations.py  fields.py  inputs.py  overview.py  profile.py
streamlit_app/runner/: __init__.py  execution.py
test_table_repo/: pyproject.toml
test_table_repo/tables/expectations_failure/: config.py  fixtures.py  pipeline.py  test_pipeline.py  transform.py
test_table_repo/tables/gold_patients/: config.py  fixtures.py  pipeline.py  test_pipeline.py  transform.py
test_table_repo/tables/happy_path/: config.py  fixtures.py  pipeline.py  test_pipeline.py  transform.py
test_table_repo/tables/malformed_pipeline/: config.py  pipeline.py
test_table_repo/tables/missing_contract/: config.py  fixtures.py  pipeline.py  test_pipeline.py  transform.py
test_table_repo/tables/schema_drift/: config.py  fixtures.py  pipeline.py  test_pipeline.py  transform.py
test_table_repo/workflows/: test_workflow.yaml
tests/: test_airflow_e2e.py  test_airflow_execution.py  test_code_comments_dao.py  test_distributed_pipeline.py  test_infrastructure_e2e.py  test_k8s_infra.py  test_multi_repo.py  test_prod_diff.py  test_run_history_dao.py  test_wheel_install_boundary.py
tests/regression/: test_diff.py  test_no_stubs.py
utils/: contracts.py  create_id.py  dataframes.py  dates.py  diagnostics.py  lineage.py  mongo.py  mongo_sample.py  objectid.py  pii.py  postgres.py  schema_infer.py  spark_local.py  strings.py  synth_data.py  tables.py  test_complex_roundtrip.py  test_contracts.py  test_dataframes.py  test_dates.py  test_lineage.py  test_mongo.py  test_mongo_sample.py  test_objectid.py  test_pii.py  test_postgres.py  test_schema_infer.py  test_strings.py  test_synth_data.py  when_chain.py
validation/: __init__.py  _framework_allowlist.txt  _legacy_manifest.txt  expectations.py  rules.py  schema.py  test_expectations.py  test_rules.py  test_validators.py  validators.py
validation/_common/: __init__.py  discovery.py  subprocess_filter.py
validation/contract/: __init__.py  test_input_schemas.py
validation/static/: test_architecture.py  test_medallion_rules.py  test_rules.py  test_schema.py  test_validators.py
web/: .dockerignore  Dockerfile  README.md  cypress.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AirflowHistory.tsx  AlertsPanel.test.tsx  AlertsPanel.tsx  CodeViewer.test.tsx  CodeViewer.tsx  CommentThread.test.tsx  CommentThread.tsx  EnvToggle.test.tsx  EnvToggle.tsx  ErrorDetail.tsx  FreshnessChart.tsx  JsonOrText.test.tsx  JsonOrText.tsx  LineageGraph.tsx  Modal.test.tsx  Modal.tsx  Nav.tsx  NewCommentForm.test.tsx  NewCommentForm.tsx  PaginationControls.test.tsx  PaginationControls.tsx  ProdDiffBadge.test.tsx  ProdDiffBadge.tsx  ProdDiffDetail.test.tsx  ProdDiffDetail.tsx  RecentErrors.test.tsx  RecentErrors.tsx  StaleList.test.tsx  StaleList.tsx  TableDetail.tsx  TruncatedCell.test.tsx  TruncatedCell.tsx
web/cypress/: tsconfig.json
web/lib/: api.ts  datetime.test.ts  datetime.ts  errorFormat.test.ts  errorFormat.ts  interactive.ts  usePagination.test.ts  usePagination.ts
web/scripts/: e2e_live.py
workflows/: bronze.yaml  silver.yaml
(+73 files in other folders)
