[tool.poetry]
name = "poorbricks-framework"
version = "0.1.0"
description = "Local Spark framework for PySpark pipeline development"
authors = ["Daniel Speixoto"]
package-mode = false

[tool.poetry.scripts]
generate-fields = "scripts.generate_fields:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pymongo = "^4.6.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
pyspark = "^4.0.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.0.0"
pytest-xdist = "^3.8.0"
pytest-cov = "^6.2.1"
autopep8 = "^2.3.2"
pandas = "^3.0.1"
openpyxl = "^3.1.5"
psycopg2-binary = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-timeout = "^2.3.1"
ipykernel = "^6.30.1"
mypy = "^1.8.0"
types-PyYAML = "^6.0.12"
types-requests = "^2.31.0"
python-dotenv = "^1.0.0"
pre-commit = "^3.6.0"
ruff = ">=0.9.10"
pandas-stubs = "^3.0.0.260204"
types-psycopg2 = "^2.9.21.20260509"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-n", "4",
    "--dist", "loadgroup",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
]

markers = [
    "spark: marks tests that require Spark session",
    "integration: marks tests that require MongoDB connection",
    "slow: marks tests as slow running"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Exclude scripts directory and certain test files
exclude = ["scripts/.*", "artifacts/.*", "\\.circleci/.*", "source/.*/test_.*\\.py", "source/test_.*\\.py"]

# Per-module options
[[tool.mypy.overrides]]
module = [
    "pyspark.*",
    "pymongo.*",
    "bson.*",
    "dotenv",
    "pytest",
    "pytest.*",
    "pydantic_settings.*",
    "databricks.connect"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tables.*"
disallow_untyped_decorators = false



[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["artifacts", "scripts", ".circleci", "__pycache__"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
# E203: whitespace before ':'
# E501: line too long (not enforced)
# F541: f-string without placeholders
ignore = ["E203", "E501", "F541"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["framework", "utils", "validation", "tables"]
known-third-party = ["pyspark", "pymongo", "pytest"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
